@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/linux-headers
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.269 2008/05/15 02:30:36 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.270 2008/06/09 09:49:22 vapier Exp $
+
+*linux-headers-2.6.25-r4 (09 Jun 2008)
+
+  09 Jun 2008; Mike Frysinger <vapier@gentoo.org>
+  +linux-headers-2.6.25-r4.ebuild:
+  Remove s6_addr* defines to stop clobbering glibc #225505.
 
 *linux-headers-2.6.25-r3 (15 May 2008)
 
